[wakhi] Fix keyboard to follow current structure

--- a/release/w/wakhi/source/welcome.htm
+++ b/release/w/wakhi/source/welcome.htm
@@ -10,7 +10,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=Generator content="Microsoft Word 15">
 <meta name=Originator content="Microsoft Word 15">
 <link rel=File-List href="welcome_files/filelist.xml">
-<title>`</title>
+<title>Wakhi Desktop & Mobile Keyboard</title>
 <!--[if gte mso 9]><xml>
  <o:DocumentProperties>
   <o:Author>Ron Lockwood</o:Author>
@@ -812,11 +812,11 @@ div.WordSection1
 
 <p class=MsoNormal><b><span lang=DA style='font-size:18.0pt;font-family:"Calibri",sans-serif;
 mso-ascii-theme-font:minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:
-minor-latin;mso-ansi-language:DA'>Wakhi Desktop &amp; Mobile Keyboard 3.0<o:p></o:p></span></b></p>
+minor-latin;mso-ansi-language:DA'>Wakhi Desktop &amp; Mobile Keyboard <o:p></o:p></span></b></p>
 
 <p class=MsoNormal><span lang=DA style='font-family:"Calibri",sans-serif;
 mso-ascii-theme-font:minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:
-minor-latin;mso-ansi-language:DA'>©2025 Samar<o:p></o:p></span></p>
+minor-latin;mso-ansi-language:DA'>(c) Samar<o:p></o:p></span></p>
 
 <p class=MsoNormal><b><span lang=DA style='font-size:18.0pt;font-family:"Calibri",sans-serif;
 mso-ascii-theme-font:minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:
@@ -840,7 +840,7 @@ mso-ansi-language:DA'>Default Layer<b><o:p></o:p></b></span></p>
   <p class=MsoNormal align=center style='text-align:center'><span
   class=KbdFont><span style='font-size:20.0pt;mso-bidi-font-size:22.0pt;
   font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-hansi-theme-font:
-  minor-latin;mso-bidi-theme-font:minor-latin;mso-ansi-language:EN-US'>÷<o:p></o:p></span></span></p>
+  minor-latin;mso-bidi-theme-font:minor-latin;mso-ansi-language:EN-US'>ï¿½<o:p></o:p></span></span></p>
   </td>
   <td width=11 style='width:8.5pt;padding:0in 0in 0in 0in;height:25.0pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
@@ -2529,7 +2529,7 @@ Layer<b><o:p></o:p></b></span></p>
   <p class=MsoNormal align=center style='text-align:center'><span
   class=KbdFont><span style='font-size:20.0pt;mso-bidi-font-size:22.0pt;
   font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-hansi-theme-font:
-  minor-latin;mso-bidi-theme-font:minor-latin;mso-ansi-language:EN-US'>×<o:p></o:p></span></span></p>
+  minor-latin;mso-bidi-theme-font:minor-latin;mso-ansi-language:EN-US'>ï¿½<o:p></o:p></span></span></p>
   </td>
   <td width=11 style='width:8.5pt;padding:0in 0in 0in 0in;height:25.0pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
@@ -3412,7 +3412,7 @@ mso-ansi-language:EN-US;mso-no-proof:no'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal align=center style='text-align:center'><span
   class=KbdFont><span lang=EN-GB style='font-size:20.0pt;mso-bidi-font-size:
   22.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;
-  mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin'>»<o:p></o:p></span></span></p>
+  mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin'>ï¿½<o:p></o:p></span></span></p>
   </td>
   <td width=11 style='width:8.5pt;padding:0in 0in 0in 0in;height:25.0pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
@@ -3425,7 +3425,7 @@ mso-ansi-language:EN-US;mso-no-proof:no'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal align=center style='text-align:center'><span
   class=KbdFont><span lang=EN-GB style='font-size:20.0pt;mso-bidi-font-size:
   22.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;
-  mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin'>«<o:p></o:p></span></span></p>
+  mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin'>ï¿½<o:p></o:p></span></span></p>
   </td>
   <td width=11 style='width:8.5pt;padding:0in 0in 0in 0in;height:25.0pt'>
   <p class=MsoNormal align=center style='text-align:center'><span
@@ -3451,7 +3451,7 @@ mso-ansi-language:EN-US;mso-no-proof:no'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal align=center style='text-align:center'><span
   class=KbdFont><span lang=EN-GB style='font-size:20.0pt;mso-bidi-font-size:
   22.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;
-  mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin'>“<o:p></o:p></span></span></p>
+  mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin'>ï¿½<o:p></o:p></span></span></p>
   </td>
   <td width=11 style='width:8.5pt;padding:0in 0in 0in 0in;height:25.0pt'>
   <p class=MsoNormal align=center style='text-align:center'><span lang=EN-GB><o:p>&nbsp;</o:p></span></p>
