added chars to onscreen keyboard

--- a/release/w/winchus/source/welcome/welcome.htm
+++ b/release/w/winchus/source/welcome/welcome.htm
@@ -1035,6 +1035,7 @@
                             </div>
                             <div class="key plain" id="K_BKSLASH">
                             <div class="keycap">\</div>
+                            <div class="keytext">`</div>
                             </div><br style="clear: left"><div class="key special" id="" style="
                                     width: 62px;
                                     
@@ -1074,6 +1075,7 @@
                             </div>
                             <div class="key plain" id="K_QUOTE">
                             <div class="keycap">'</div>
+                            <div class="keytext">^</div>
                             </div>
                             <div class="key special" id="" style="
                                     width: 70px;
@@ -2824,7 +2826,7 @@
         <div style="text-align: center;">
             <p>¡Yulsulpallä! Muchas gracias.</p>
         <br />
-    <h6><i>Documento actualizado 10 marzo 2025</i></h6><br />
+    <h6><i>Documento actualizado 13 marzo 2025</i></h6><br />
     </div>
 <!-- #endregion -->
 <!-- COPIAR A winchus.php -->
