--- a/release/v/vietnam/source/welcome.htm
+++ b/release/v/vietnam/source/welcome.htm
@@ -98,10 +98,52 @@
     <td>tư</td>
   </tr>
     <tr>
-    <td>-nn</td>
     <td>-nh</td>
+    <td>nn</td>
     <td>a<strong>nn</strong></td>
     <td>anh</td>
+  </tr>
+  <tr>
+    <td>ương</td>
+    <td>uonn</td>
+    <td>uon<strong>n</strong></td>
+    <td>ương</td>
+  </tr>
+  <tr>
+    <td>dương/-ương</td>
+    <td>iunn</td>
+    <td><strong>i</strong>u<strong>nn</strong></td>
+    <td>dương</td>
+  </tr>
+  <tr>
+    <td>ông</td>
+    <td>oonn</td>
+    <td>o<strong>o</strong>n<strong>n</strong></td>
+    <td>ông</td>
+  </tr>
+  <tr>
+    <td>âng</td>
+    <td>aann</td>
+    <td>va<strong>a</strong>n<strong>n</strong></td>
+    <td>vâng</td>
+  </tr>
+  <tr>
+    <td>ăng</td>
+    <td>awnn</td>
+    <td>ta<strong>w</strong>n<strong>n</strong></td>
+    <td>tăng</td>
+  </tr>
+  <tr>
+    <td>ưng</td>
+    <td>uwnn</td>
+    <td>cu<strong>w</strong>n<strong>n</strong></td>
+    <td>cưng</td>
+  </tr>
+    <tr>
+    <td>iêng</td>
+    <td>iinn</td>
+    <td>li<strong>i</strong>n<strong>n</strong>/lie<strong>e</strong>n<strong>n</strong></td>
+    <td>liêng</td>
   </tr>
   </tbody>
 </table>
