--- a/experimental/l/luo_lakeside/source/readme.htm
+++ b/experimental/l/luo_lakeside/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Luo Lakeside</h1>
 
 <p>
-  This is a Luo keyboard that uses the unique Luo Lakeside script.
+  This is a Luo keyboard that uses the unique Luo Lakeside script. The Luo Lakeside script is not yet included in Unicode.
 </p>
 
 <p>Copyright © Oreen Yousuf</p>
