--- a/experimental/l/luo_lakeside/source/welcome.htm
+++ b/experimental/l/luo_lakeside/source/welcome.htm
@@ -15,20 +15,20 @@
 <h1>Start Using Luo Lakeside</h1>
 
 <p>
-  This is a Luo keyboard that uses the unique Luo Lakeside script.
+  This is a Luo keyboard that uses the unique Luo Lakeside script. The Luo Lakeside script is not yet included in Unicode.
 </p>
 <p>See <a href="file:typing_manual.pdf">this document</a> for all the key combinations.</p>
 <h1>Keyboard Layout</h1>
 
-<!-- Insert Keyboard Layout Images or HTML here -->
 <p><b>Unshifted</b></p>
-<img src='luo_lakeside_U.png' alt='Keyboard Layout'>
+<img width="50%" src='luo_lakeside_U.png' alt='Keyboard Layout'>
 <p><b>Shifted</b></p>
-<img src='luo_lakeside_S.png' alt='Keyboard Layout'>
+<img width="50%" src='luo_lakeside_S.png' alt='Keyboard Layout'>
 <p><b>Alt</b></p>
-<img src='luo_lakeside_A.png' alt='Keyboard Layout'>
+<img width="50%" src='luo_lakeside_A.png' alt='Keyboard Layout'>
 <p><b>Alt Shifted</b></p>
-<img src='luo_lakeside_A_S.png' alt='Keyboard Layout'>
+<img width="50%" src='luo_lakeside_A_S.png' alt='Keyboard Layout'>
+
 <p>Copyright © Oreen Yousuf</p>
 </body>
 </html>
