--- a/release/h/ho_latin/source/welcome/welcome.htm
+++ b/release/h/ho_latin/source/welcome/welcome.htm
@@ -18,7 +18,7 @@
 	}
 	.key{
 		height: 12px;
-		width: 18px;
+		width: 20px;
 	}
 
   </style>
@@ -27,45 +27,52 @@
 
 <h1>Ho Latin Keyboard te cheleka oloḱa:</h1>
 
-	<h2>Desktop lagit́ Rule ko</h2>
+	<h2>Desktop lagit́ Rule ko (Phone reaḱ Rule ko latar paa rea)</h2>
 	<h3>Consonant ko</h3>
-	<b>k; = ḱ<br>
-	c; = ć<br>
-	z; = t́<br>
-	p; = ṕ<br>
-	w; = ṕ<br><br>
+	<b>k; → ḱ<br>
+	c; → ć<br>
+	z; → t́<br>
+	p; → ṕ<br>
+	w; → ṕ<br><br>
 
-	t; = ṭ<br>
-	d; = ḍ<br>
-	r; = ṛ<br><br>
+	t; → ṭ<br>
+	d; → ḍ<br>
+	r; → ṛ<br><br>
 
-	n; = ṅ<br>
-	j; = ń</b><br><br>
+	n; → ṅ<br>
+	j; → ń</b><br><br>
 
-	Diacritic menaḱ Consonant ko (ḱ, ć, t́, ṕ, ṭ, ḍ, ṛ, ṅ, ń eman) do, en Letter tayom Semicolon (;) Key otaè re hućoḱa.
+	Diacritic menaḱ Consonant ko (<b>ḱ, ć, t́, ṕ, ṭ, ḍ, ṛ, ṅ, ń</b> eman) do, en Letter tayom Semicolon (<b>;</b>) Key otaè re hućoḱa.
 
 	Example lekate:
-	"k" tayom ";" (k;) ota kee re "ḱ" hućoḱa.
-	Enlekage, "d" tayom ";" (d;) ota kee re "ḍ" hućoḱa.
-	Maraṅ Ol ó enkage, "K" tayom ";" (K;) otaè re "Ḱ" hućoḱa.
+	<b>k</b> tayom <b>;</b> (<b>k;</b>) ota kee re <b>ḱ</b> hućoḱa.
+	Enlekage, <b>d</b> tayom <b>;</b> (<b>d;</b>) ota kee re </b>ḍ</b> hućoḱa.
+	Maraṅ Ol ó enkage, <b>K</b> tayom <b>;</b> (<b>K;</b>) otaè re <b>Ḱ</b> hućoḱa.
 
 	<h4>Exception ko</h4>
-		"t́" do "z" tayom ";" (z;) otaè re hućoḱa, "t" tayom ";" otaè redo "ṭ" sekar hućoḱa.
-		Typing re tílavroḱkâ mente "ṕ" do, "p" tayom ";" otaè reó hućoḱa, "w" tayom ";" otaè reó hućoḱ gea.
-		"ń" do "j" tayom ";" (j;) otaè re hućoḱa, "n" tayom ";" otaè redo "ṅ" sekar hućoḱa.
+<b>t́</b> do <b>z</b> tayom <b>;</b> (<b>z;</b>) otaè re hućoḱa, <b>t</b> tayom <b>;</b> otaè redo <b>ṭ</b> sekar hućoḱa.
+		Typing re tílavroḱkâ mente <b>ṕ</b> do, <b>p</b> tayom <b>;</b> otaè reó hućoḱa anḍoḱ  <b>w</b> tayom <b>;</b> otaè reó hućoḱ gea.
+	<b>ń</b> do <b>j</b> tayom <b>;</b> (<b>j;</b>) otaè re hućoḱa, <b>n</b> tayom <b>;</b> otaè redo <b>ṅ</b> sekar hućoḱa.
 
 
 	<h3>Vowel ko</h3>
-		<b>a; = á<br>
-			a;; = â<br>
-			a;;; = ã<br>
-			a;;;; = ã́<br>
-			a;;;;; = à<br>
-			a~ = ã<br>
-			a` = à<br>
-			a~` = ã́</b><br>
-			Eṭaḱ Vowel Letter ko (e, i, o, u) lagit́ ó enka ge oloḱa.		
-		
+		<b>a;</b> → <b>á</b><br>
+			<b>a;;</b> → <b>â</b><br>
+			<b>a;;;</b> → <b>ã</b><br>
+			<b>a;;;;</b> → <b>ã́</b><br>
+			<b>a;;;;;</b> → <b>à</b><br>
+			<b>a~</b> → <b>ã</b><br>
+			<b>a`</b> → <b>à</b><br>
+			<b>a~`</b> → <b>ã́</b><br>
+			Eṭaḱ Vowel Letter (<b>e, i, o, u</b>) ko ó enka ge oloḱa.		
+
+	<h3>Symbol ko</h3>
+	Semicolon (<b>;</b>)„ Backtick (<b>`</b>)„ Tilde (<b>~</b>), nen apia Symbol do <b>ALT</b> ota akaa te en Symbol ko otaè re hućoḱa.
+	Example lekate:</br>
+	<b>ALT</b> + <b>;</b> → <b>;</b></br>
+	<b>ALT</b> + <b>`</b> → <b>`</b></br>
+	<b>ALT</b> + <b>SHIFT</b> + <b>~</b> → <b>~</b></br>
+	Bar dau Comma (<b>,</b>) ota kee re <b>„</b> hućoḱa, sama Comma lagit́ <b>ALT</b> + Comma (<b>,</b>) ota daeoḱa.
 <h2>Phone reaḱ Rule ko</h2>
 <h3>Keyboard Sanarai</h3>
 <img class="touch" src="ho_latin-default_layer.png" alt="Touch Layout, Default"><br>
@@ -81,8 +88,10 @@ Example lekate:<br>
 <b>"n"</b> tayom <img class="keyacute" src="acute-ho_latin.png" alt="´` Key"> otaè re <b>"ń"</b> hućoḱa.<br>
 <b>"n"</b> tayom <img class="key" src="tilde-ho_latin.png" alt="˜˙ˆ Key"> otaè re <b>"ṅ"</b> hućoḱa.<br>
 <b>"k", "c", "t", "p", "ṭ"</b> tayom <img class="keyacute" src="acute-ho_latin.png" alt="´` Key"> otaè re <b>"ḱ", "ć", "t́", "ṕ"</b> hućoḱa.<br>
+</br>
+</br>
 
-<p>© Mangu Purty</p>
+Copyright © 2024-2025 Mangu Purty
 
 </body>
 </html>
