--- a/release/h/ho_latin/source/welcome/welcome.htm
+++ b/release/h/ho_latin/source/welcome/welcome.htm
@@ -29,18 +29,18 @@
 
 	<h2>Desktop lagit́ Rule ko (Phone reaḱ Rule ko latar paa rea)</h2>
 	<h3>Consonant ko</h3>
-	<b>k; → ḱ<br>
-	c; → ć<br>
-	z; → t́<br>
-	p; → ṕ<br>
-	w; → ṕ<br><br>
+	<b>k;</b> → <b>ḱ</b><br>
+	<b>c;</b> → <b>ć</b><br>
+	<b>z;</b> → <b>t́</b><br>
+	<b>p;</b> → <b>ṕ</b><br>
+	<b>w;</b> → <b>ṕ</b><br><br>
 
-	t; → ṭ<br>
-	d; → ḍ<br>
-	r; → ṛ<br><br>
+	<b>t;</b> → <b>ṭ</b><br>
+	<b>d;</b> → <b>ḍ</b><br>
+	<b>r;</b> → <b>ṛ</b><br><br>
 
-	n; → ṅ<br>
-	j; → ń</b><br><br>
+	<b>n;</b> → <b>ṅ</b><br>
+	<b>j;</b> → <b>ń</b><br><br>
 
 	Diacritic menaḱ Consonant ko (<b>ḱ, ć, t́, ṕ, ṭ, ḍ, ṛ, ṅ, ń</b> eman) do, en Letter tayom Semicolon (<b>;</b>) Key otaè re hućoḱa.
 
@@ -48,7 +48,6 @@
 	<b>k</b> tayom <b>;</b> (<b>k;</b>) ota kee re <b>ḱ</b> hućoḱa.
 	Enlekage, <b>d</b> tayom <b>;</b> (<b>d;</b>) ota kee re </b>ḍ</b> hućoḱa.
 	Maraṅ Ol ó enkage, <b>K</b> tayom <b>;</b> (<b>K;</b>) otaè re <b>Ḱ</b> hućoḱa.
-
 	<h4>Exception ko</h4>
 <b>t́</b> do <b>z</b> tayom <b>;</b> (<b>z;</b>) otaè re hućoḱa, <b>t</b> tayom <b>;</b> otaè redo <b>ṭ</b> sekar hućoḱa.
 		Typing re tílavroḱkâ mente <b>ṕ</b> do, <b>p</b> tayom <b>;</b> otaè reó hućoḱa anḍoḱ  <b>w</b> tayom <b>;</b> otaè reó hućoḱ gea.
@@ -73,7 +72,12 @@
 	<b>ALT</b> + <b>`</b> → <b>`</b></br>
 	<b>ALT</b> + <b>SHIFT</b> + <b>~</b> → <b>~</b></br>
 	Bar dau Comma (<b>,</b>) ota kee re <b>„</b> hućoḱa, sama Comma lagit́ <b>ALT</b> + Comma (<b>,</b>) ota daeoḱa.
-<h2>Phone reaḱ Rule ko</h2>
+
+	<h3>Letter suba re Gár</h3>
+		Chiminaṅ Letter ko suba re Gár ol daeoḱa <b>ALT</b> + <b>SHIFT</b> + <b>-</b>(Hyphen) ota kee re.</br>
+		Example lekate:</br>
+		<b>n</b> + <b>ALT</b> + <b>SHIFT</b> + <b>-</b> → <b>ṉ</b>
+	<h2>Phone reaḱ Rule ko</h2>
 <h3>Keyboard Sanarai</h3>
 <img class="touch" src="ho_latin-default_layer.png" alt="Touch Layout, Default"><br>
 
