[busra_kbds] Change Khmr keyboards to use Busra instead of Mondulkiri

--- a/release/sil/sil_brao/source/welcome/welcome.htm
+++ b/release/sil/sil_brao/source/welcome/welcome.htm
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Start Using Brao (SIL)</title>
   <style type="text/css">
-    p { font: 12pt Khmer Mondulkiri; }
-	ul { font: 12pt Khmer Mondulkiri; }
-    h1 { font: bold 16pt Khmer Mondulkiri; color: #4444cc; margin-bottom: 2px }
-    h2 { font: bold 14pt Khmer Mondulkiri; color: #4444cc; }
+    p { font: 12pt Busra; }
+	ul { font: 12pt Busra; }
+    h1 { font: bold 16pt Busra; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 14pt Busra; color: #4444cc; }
 	kbd {
     background-color: #eee;
     border-radius: 3px;
