--- a/release/k/khmer_angkor/source/welcome/welcome.htm
+++ b/release/k/khmer_angkor/source/welcome/welcome.htm
@@ -61,7 +61,7 @@ With the latest upgrade to touch layouts, Khmer Angkor keyboard now supports new
     To get Khmer fonts, you may visit one of the three sources below:
 <ul style="list-style-type:circle">
     <li><a href="https://github.com/KhmerSoftwareInitiative/khmer-unicode-fonts">Khmer Fonts by the Khmer Software Initiative</a></li>
-    <li><a href="https://software.sil.org/mondulkiri/">Khmer Font by SIL Global</a></li>
+    <li><a href="https://software.sil.org/busra/">Khmer Font by SIL Global</a></li>
     <li><a href="https://fonts.google.com/?subset=khmer">Khmer Fonts by Google</a> </li>
 </ul>
 
