--- a/release/sil/sil_brao/source/readme.htm
+++ b/release/sil/sil_brao/source/readme.htm
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Brao (SIL)</title>
   <style type="text/css">
-    p { font: 12pt Khmer Mondulkiri; }
-    h1 { font: bold 16pt Khmer Mondulkiri; color: #4444cc; margin-bottom: 2px }
-    h2 { font: bold 14pt Khmer Mondulkiri; color: #4444cc; }
+    p { font: 12pt Busra; }
+    h1 { font: bold 16pt Busra; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 14pt Busra; color: #4444cc; }
   </style>
 </head>
 <body>
