--- a/release/sil/sil_bunong/source/welcome/welcome.htm
+++ b/release/sil/sil_bunong/source/welcome/welcome.htm
@@ -7,7 +7,7 @@
 	li.en { font: 10pt Tahoma; }
 	h1 { font: bold 16pt; color: #4444cc; margin-bottom: 2px }
     h2 { font: bold 12pt; color: #4444cc; }
-	li.km { font: 11pt Khmer Mondulkiri; }
+	li.km { font: 11pt Busra; }
     
 	.tabs{
     // width: 100%;
@@ -111,7 +111,7 @@
 </p>
 
 <p style="text-align: justify;">
-នតីលញចីស «Khmer Mondulkiri» គែសលាប់តាត្រោម កាដារនទើល៝ត់​ «Bunong ឞូន៝ង (SIL)»។  នោកឞ៝ន់ងលាប់ មោលាសរាហ្វាត់ កាដារនទើល៝ត់​ «Bunong ឞូន៝ង (SIL)»  គែសងលាប់​ មោលាសគែសរាហ្វាត់ នតីលញចីស «Khmer Mondulkiri» នទ្រែលដ៝ង់។ 
+នតីលញចីស «Busra» គែសលាប់តាត្រោម កាដារនទើល៝ត់​ «Bunong ឞូន៝ង (SIL)»។  នោកឞ៝ន់ងលាប់ មោលាសរាហ្វាត់ កាដារនទើល៝ត់​ «Bunong ឞូន៝ង (SIL)»  គែសងលាប់​ មោលាសគែសរាហ្វាត់ នតីលញចីស «Busra» នទ្រែលដ៝ង់។ 
 </p>
 
 <p style="text-align: justify;">
@@ -271,7 +271,7 @@
 ក្ដារចុចនេះត្រូវបានបង្កើតឡើងសម្រាប់វាយអត្ថបទភាសាព្នង ដោយប្រើតួអក្សរខ្មែរ។</p>
 
 <p style="text-align: justify;">
-ពុម្ពអក្សរ «Khmer Mondulkiri» ត្រូវបានដាក់បញ្ចូលក្នុងកញ្ចប់ក្ដារចុចនេះស្រាប់។ ពុម្ពអក្សរនេះនឹងត្រូវបានដំឡើង និងលុបចេញ ជាមួយនឹងក្ដារចុចនេះ។
+ពុម្ពអក្សរ «Busra» ត្រូវបានដាក់បញ្ចូលក្នុងកញ្ចប់ក្ដារចុចនេះស្រាប់។ ពុម្ពអក្សរនេះនឹងត្រូវបានដំឡើង និងលុបចេញ ជាមួយនឹងក្ដារចុចនេះ។
 </p>
 
 <p style="text-align: justify;">
@@ -429,7 +429,7 @@
 This keyboard is designed for typing Bunong language using Khmer characters.</p>
 
 <p style="text-align: justify;">
-Khmer Mondulkiri font is included in the keyboard package. It will be installed and uninstalled along with the keyboard.
+Busra font is included in the keyboard package. It will be installed and uninstalled along with the keyboard.
 </p>
 
 <p style="text-align: justify;">
