--- a/release/h/ho_latin/source/readme.htm
+++ b/release/h/ho_latin/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Ho Latin</h1>
 
 <p>
-    Ho Latin 1.0 generated from template.
+    Practical Ho Latin keyboard.
 </p>
 
 <p>© Mangu Purty</p>
