--- a/release/v/vietnam/source/readme.htm
+++ b/release/v/vietnam/source/readme.htm
@@ -16,7 +16,7 @@
 <h1>vietnam</h1>
 
 <p>
-    vietnam keyboard for Chữ Quốc Ngữ Tiếng Việt (Vietnamese), Vạ Xoạng (Zhuang Romanization), Quỏng Đung Vạ (Cantonese Romanization) and Hòi Sán Vạ (Hoisanese Romanization)
+    vietnam keyboard for Chữ Quốc Ngữ Tiếng Việt (Vietnamese)
 </p>
 <p>
   Telex or TELEX (Vietnamese: Quốc ngữ điện tín, lit. 'national language telex'), is a convention for encoding Vietnamese text in plain ASCII characters. Originally used for transmitting Vietnamese text over telex systems, it is one of the most used input method on phones and touchscreens and also computers. Vietnamese Morse code uses the TELEX system. In 1993, the use of Telex as an input method was standardized in Vietnam as part of TCVN 5712.
