--- a/release/g/greek_tonizo/source/welcome.htm
+++ b/release/g/greek_tonizo/source/welcome.htm
@@ -3,31 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Start Using keymangreek</title>
+  <title>Greek Tonizo: Τεκμηρίωση</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
-    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+    h2 { font: 12pt Tahoma; }
   </style>
 </head>
 <body>
 
-<h1>Μιὰ ματιὰ στὸ πληκτρολόγιο</h1>
-<p>Δεῖτε ποῦ βρίσκονται οἱ τόνοι καὶ πῶς διευκολύνει τὴν χρήση τους τὸ keymangreek. Μόλις τελειώσετε πατῆστε ΟΚ ἢ Done.</p>
-<h2>Ὀξεῖα, περισπωμένη, δασεῖα: ΚΙΤΡΙΝΑ ΠΛΗΚΤΡΑ</h2>
-<p>Αὐτόματη ψιλή στὰ α,ε,η,ι,ο,ω<br>
-Αὐτόματη δασεῖα στὸ υ<br>
-<b>Μὲ τὸ χέρι δασεῖα MONON στὰ ἀρχικὰ α,ε,η,ι,ο,ω</b></p>
-<img src="kbd.jpg" alt="Διάταξη πλήκτρων" width="200" height="120">  
-<h2>Ὑπογεγραμμένη, διαλυτικά: ΡΟΖ ΠΛΗΚΤΡΑ</h2>
-<p>Μὲ συνεχὲς πάτημα στὸ ἀντίστοιχο φωνῆεν</p>
-<img src="kbd1.jpg" alt="Ὑπογεγραμμένη" width="200" height="120">  
-<h2>Σημεῖα στίξεως: ΚΥΑΝΑ ΠΛΗΚΤΡΑ</h2>
-<p>Μὲ τὸ 123 ἢ μὲ συνεχὲς πάτημα στὴν τελεία</p>
-<img src="kbd3.jpg" alt="numeric" width="200" height="120">  
-<p>Διπλὸ πάτημα SHIFT -> CAPS LOCK</p>
-<p>Ἀρχαϊκοὶ χαρακτῆρες: Alt</p>
-<img src="kbd4.jpg" alt="Ἀρχαϊκοὶ χαρακτῆρες" width="200" height="120">  
-
-</body>
+<h1>Greek Tonizo</h1>
+<h2>Ἕνα ἑλληνικὸ πολυτονικὸ πληκτρολόγιο σχεδιασμένο εἰδικὰ γιὰ Ἕλληνες καὶ Ἑλληνόφωνους ποὺ θέλουν νὰ (ξανα)γράψουν πολυτονικά.</h2>
+<h2>Ἡ λεπτομερὴς περιγραφὴ τοῦ πληκτρολογίου Greek Tonizo, μαζὶ μὲ τὶς ὁδηγίες ἐγκαταστάσεώς του σὲ ἐπιτραπέζιες (Windows, mac, linux) ἢ κινητὲς (iOS, Android) συσκευές βρὶσκονται στὸν ἱστότοπο https://greek.tonizo.gr</h2>
+<p>---------------------------------</p>
+<h2>A polytonic greek keyboard specially designed for Greeks or Greek speakers wanting to (re)write polytonic greek.</h2>
+<h2>The detailed description of Greek Tonizo, as well as the installation instructions on desktop computers (Windows, mac, linux) or mobile devices (iOS, Android) can be found on the Greek Tonizo site: https://greek.tonizo.gr</h2>
+<p>---------------------------------</p>
+<h2>Εὐχαριστοῦμε!</h2></body>
 </html>
