[kbd_3221] Adjust language tags for Issue 3221

--- a/release/basic/basic_kbdoldit/source/welcome/welcome.htm
+++ b/release/basic/basic_kbdoldit/source/welcome/welcome.htm
@@ -14,7 +14,7 @@
 <h1>Start Using Old Italic Basic</h1>
 
 <p>
-    Old Italic Basic 1.1.
+  Old Italic Basic based on Windows 10 layout.
 </p>
 
 <h1>Keyboard Layout</h1>
@@ -26,8 +26,6 @@
 <img src="touch_layout_default.png" alt="Touch Layout, Default">
 <p>Shift Layer</p>
 <img src="touch_layout_shift.png" alt="Touch Layout, Shift">
-
-<p>© 2019 SIL International</p>
 
 </body>
 </html>
