--- a/release/sil/sil_tchad_qwerty/source/welcome/welcome.htm
+++ b/release/sil/sil_tchad_qwerty/source/welcome/welcome.htm
@@ -378,7 +378,7 @@ will be changed to curled quotes depending on the context. If you need to use st
 <p>For more information and guidance on the QWERTY Keyboard of Chad, you can reach us here : 
 <a href=https://sites.google.com/sil.org/sil-tchad-langtech/home>Language Technology Chad</a></p>
 
-<p>©&nbsp;2017-2024 SIL International.</p>
+<p>©&nbsp; SIL Global</p>
 </div>
 </div>
 <!--Ending English-->
@@ -660,7 +660,7 @@ pour taper des caractères spéciaux.</p>
 <p> Pour plus d’information et orientation sur le Clavier QWERTY du Tchad vous pouvez nous joindre ici :
 <a href=https://sites.google.com/sil.org/sil-tchad-langtech/home>Technologie Linguistique Tchad</a></p>
 
-<p>©&nbsp;2017-2024 SIL International</p>
+<p>©&nbsp; SIL Global</p>
 </div>
 </div>
 <!--Ending French-->
