--- a/release/basic/basic_kbdoldit/source/readme.htm
+++ b/release/basic/basic_kbdoldit/source/readme.htm
@@ -14,10 +14,8 @@
 <h1>Old Italic Basic</h1>
 
 <p>
-    Old Italic Basic 1.0 generated from template.
+  Old Italic Basic based on Windows 10 layout.
 </p>
-
-<p>© 2019 SIL International</p>
 
 </body>
 </html>
