--- a/release/g/greek_tonizo/source/readme.htm
+++ b/release/g/greek_tonizo/source/readme.htm
@@ -12,12 +12,12 @@
 </head>
 <body>
 
-<h1>greek_tonizo 1.0.2</h1>
+<h1>greek_tonizo</h1>
 
 <p>Πατῆστε INSTALL γιὰ νὰ ἐγκαταστήσετε τὸ πληκτρολόγιο.</p>
 
 
-<p>Copyright © 2024-2025 Amaryllis Deliyanni</p>
+<p>Copyright © Amaryllis Deliyanni</p>
 
 </body>
 </html>
