--- a/experimental/h/hoisan/source/readme.htm
+++ b/experimental/h/hoisan/source/readme.htm
@@ -16,7 +16,7 @@
 <h1>Hoisan</h1>
 
 <p>
-  Hoisan keyboard for Hòi Sán Vạ Koc Ngũi Tụ (Hoisanese).
+  Hoisan keyboard for Hòi Sán Vạ Coc Ngũi Tụ (Hoisanese).
 </p>
 <p>
   台山話國語字 Hoisanese Romanization
@@ -26,7 +26,7 @@
 <p> telegram: https://t.me/cathaylab</p>
 <p> instagram for publisher: cathay_lab2024 </p>
 <p> instagram for Cantonese Romanization program: cantonese_chuquocngu</p>
-<a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/quocnguytihoisanva.dict.yaml">Dictionary for Hoisanese Koc Ngũi Tụ台山話國語字字典</a>
+<a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/quocnguytihoisanva.dict.yaml">Dictionary for Hoisanese Coc Ngũi Tụ台山話國語字字典</a>
 
 <p>Copyright © cathaylab</p>
 
