--- a/experimental/h/hoisan/source/welcome.htm
+++ b/experimental/h/hoisan/source/welcome.htm
@@ -21,11 +21,11 @@
 <h1>Start Using hoisan</h1>
 
 <p>
-  hoisan for Hòi Sán Vạ Koc Ngũi Tụ (Hoisanese). hoisan台山話國語字
+  hoisan for Hòi Sán Vạ Coc Ngũi Tụ (Hoisanese). hoisan台山話國語字
 <p>
 
  <p> 台山話國語字係一種羅馬化嘅粵語文字 <p>
-    <p> Hòi Sán Vạ Koc Ngũi Tụ hại yât chủng Lò-Mã phá ké Oạt Ngũi mần tụ. <p>
+    <p> Hòi Sán Vạ Coc Ngũi Tụ hại yât chủng Lò-Mã phá ké Oạt Ngũi mùn tụ. <p>
 <p>
 
 <h1>音韻表 phonologic map</h1>
@@ -34,6 +34,8 @@
 
 <h1>韻首consonants</h1>
 <img src='consonants.png' alt='Keyboard Layout'>
+<p>位於字母a â ă u ư o ô ơ 之前嘅韻首k可以轉變為c</p>
+<p>The consonant "k" before vowels a â ă u ư o ô ơ can be transformed to "c"</p>
 
 <h1>韻腹vowels</h1>
 <img src='vowels.png' alt='Keyboard Layout'>
@@ -78,8 +80,8 @@
 <tr>
   <td>ơ</td>
   <td>ow</td>
-  <td>ko<strong>w</strong></td>
-  <td>kơ㗎</td>
+  <td>co<strong>w</strong></td>
+  <td>cơ㗎</td>
 </tr>
 </tbody>
 </table>
@@ -101,8 +103,8 @@
   <tr>
     <td>1(high level)</td>
     <td>s</td>
-    <td>Kao<strong>s</strong></td>
-    <td>Káo高</td>
+    <td>cao<strong>s</strong></td>
+    <td>cáo高</td>
   </tr>
   <tr>
     <td>2 (high rising)</td>
@@ -176,14 +178,14 @@
 <p> tap Z key to remove tonations  <p>
 
 
-<a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/quocnguytihoisanva.dict.yaml">台山話國語字字典dictionary for Hoisanese Koc Ngũy Tụ</a>
+<a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/quocnguytihoisanva.dict.yaml">台山話國語字字典dictionary for Hoisanese Coc Ngũy Tụ</a>
 
 <!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
 
 
-<p>範文：南國山河 Nàm Koc Sán Hò<p>
-<p>南國山河南帝居 Nàm Koc Sán Hò Nàm Ái Kúi<p>
-<p>截然定分在天書 Tiệt Ngình Ịnh Phân Tọi Hính Sí<p>
+<p>範文：南國山河 Nàm Coc Sán Hò<p>
+<p>南國山河南帝居 Nàm Coc Sán Hò Nàm Ái Cúi<p>
+<p>截然定分在天書 Tiệt Ngình Ịnh Phún Tọi Hính Sí<p>
 <p>如何逆虜來侵犯 Ngùi Hò Ngịch Lũ Lòi Xấm Phạn<p>
 <p>汝等行看取敗虛 Nỹ Ảnh Hành Hón Xủi Bại Húi<p>
 
