--- a/experimental/h/hoisan/source/welcome.htm
+++ b/experimental/h/hoisan/source/welcome.htm
@@ -12,6 +12,20 @@
     td {font-size: 20px;}
     tr {font-size: 20px;}
     a { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    .msg-ieioywrtant { color: rgb(238, 0, 0); background-color: rgb(255, 213, 213); border: 2px dashed rgb(238, 0, 0); padding: 8pt 16pt; margin: 8pt 0; display: inline-block; }
+    table {
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid rgb(0, 0, 0);
+      padding: 5pt 10pt;
+    }
+    code {
+      border: 1px solid rgb(199, 199, 199);
+      border-radius: 3pt;
+      background: rgb(238, 238, 238);
+      padding: 1pt 2pt;
+    }
   </style>
 
 
@@ -116,7 +130,7 @@
   <tr>
     <td>3 (mid level)</td>
     <td>s</td>
-    <td>huy<strong>s</strong></td>
+    <td>hui<strong>s</strong></td>
     <td>húi去
     </td>
   </tr>
@@ -143,7 +157,7 @@
   <tr>
     <td>7 (high entering)</td>
     <td>/</td>
-    <td>yaat></td>
+    <td>yaat</td>
     <td>yât一
     </td>
   </tr>
@@ -158,7 +172,7 @@
     <td>9 (low entering)</td>
     <td>j</td>
     <td>phat<strong>j</strong></td>
-    <td>phat罰
+    <td>phạt罰
     </td>
   </tr>
 </tbody>
