--- a/experimental/h/hoisan/source/readme.htm
+++ b/experimental/h/hoisan/source/readme.htm
@@ -19,7 +19,7 @@
   Hoisan keyboard for Hòi Sán Vạ Coc Ngũi Tụ (Hoisanese).
 </p>
 <p>
-  台山話國語字 Hoisanese Romanization
+  台山話國語字 the Script of National Language for Hoisanese
 </p>
 <p> e-mail: goetiansoc@proton.me</p>
 
