--- a/experimental/h/hoisan/source/welcome.htm
+++ b/experimental/h/hoisan/source/welcome.htm
@@ -35,16 +35,16 @@
 <h1>Start Using hoisan</h1>
 
 <p>
-  hoisan for Hòi Sán Vạ Coc Ngũi Tụ (Hoisanese). hoisan台山話國語字
+  hoisan for Hòi Sán Vạ Coc Ngũi Tụ (Hoisanese). 
 <p>
-
+  <p>the Script of National Language for Hoisanese台山話國語字</p>
  <p> 台山話國語字係一種羅馬化嘅粵語文字 <p>
     <p> Hòi Sán Vạ Coc Ngũi Tụ hại yât chủng Lò-Mã phá ké Oạt Ngũi mùn tụ. <p>
 <p>
 
 <h1>音韻表 phonologic map</h1>
 <p> 建議以下嘅台山話國語字音韻表打字<p>
-<p> The suggested form of spelling of Hoisanese Romanization<p></p>
+<p> The suggested form of spelling of the Script of National Language for Hoisanese<p></p>
 
 <h1>韻首consonants</h1>
 <img src='consonants.png' alt='Keyboard Layout'>
