updated to Keyman 17.0, delted superfluous files, updated license copyright, resized keyboard graphics, stated that the script is unencoded in all relevant files, removed non-ASCII letters on left side of the + in the code, removed tablet line from .php file

--- a/experimental/m/masaba/source/readme.htm
+++ b/experimental/m/masaba/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>masaba</h1>
 
 <p>
-    Ce clavier est utilisé pour écrire le Bambara dans l'écriture Masaba. / This keyboard is used to write Bambara in the Masaba script.
+    Ce clavier est utilisé pour écrire le Bambara dans l'écriture Masaba. L'écriture Masaba n'est pas encore incluse dans Unicode./ This keyboard is used to write Bambara in the Masaba script. The Masaba script is not yet included in Unicode.
 </p>
 
 <p>© Oreen Yousuf</p>
