--- a/experimental/m/masaba/source/welcome.htm
+++ b/experimental/m/masaba/source/welcome.htm
@@ -15,18 +15,18 @@
 <h1>Start Using Masaba. / Commencez à utiliser Masaba.</h1>
 
 <p>
-    Ce clavier est utilisé pour écrire le Bambara dans l'écriture Masaba. / This keyboard is used to write Bambara in the Masaba script.
+    Ce clavier est utilisé pour écrire le Bambara dans l'écriture Masaba. L'écriture Masaba n'est pas encore incluse dans Unicode./ This keyboard is used to write Bambara in the Masaba script. The Masaba script is not yet included in Unicode.
 </p>
-<p>Voir <a href="Manuel de dactylographie - Typing Manual.pdf">ce document</a> pour toutes les combinaisons de touches.
-See <a href="Manuel de dactylographie - Typing Manual.pdf">this document</a> for all the key combinations.</p></p>
+<p>Voir <a href="MasabaTypingManual.pdf">ce document</a> pour toutes les combinaisons de touches.
+See <a href="MasabaTypingManual.pdf">this document</a> for all the key combinations.</p></p>
 
 <h1>Disposition des touches d'un clavier de saisie / Keyboard Layout</h1>
 
 <!-- Insert Keyboard Layout Images or HTML here -->
 <p><b>Touche du clavier non décalée / Unshifted</b></p>
-<img src='masaba_U.png' alt='Keyboard Layout'>
+<img src='masaba_U.png' width="900" alt='Keyboard Layout'>
 <p><b>Touche Maj du clavier / Shifted</b></p>
-<img src='masaba_S.png' alt='Keyboard Layout'>
+<img src='masaba_S.png' width="900" alt='Keyboard Layout'>
 <p>Copyright © Oreen Yousuf</p>
 
 </body>
