Added license and copyright info. to font; filled in OFL.txt details; removed copyright from welcome.htm and .kps; mentioned that Zanan is an unencoded script in the .php file

--- a/experimental/z/zanan/source/welcome.htm
+++ b/experimental/z/zanan/source/welcome.htm
@@ -30,7 +30,7 @@ See <a href="ZananTypingManual.pdf">this document</a> for all the key combinatio
 <img src='zanan_S.png' width="900" alt='Keyboard Layout'>
 <p><b>Alt (touche) / Alt</b></p>
 <img src='zanan_U_A.png' width="900" alt='Keyboard Layout'>
-<p>Copyright 2025 © Oreen Yousuf</p>
+<p>Copyright © Oreen Yousuf</p>
 
 </body>
 </html>
