--- a/release/sil/sil_tchad_qwerty/source/welcome/welcome.htm
+++ b/release/sil/sil_tchad_qwerty/source/welcome/welcome.htm
@@ -1,131 +1,30 @@
 <!DOCTYPE html>
- 
-<html>
 
+<html>
 <head>
 <meta charset="utf-8">
 <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
 <title>Chad QWERTY Keyboard Help</title>
 <link rel="stylesheet" href="Td.css">
 
-<style>
-.keyboard {
-  font-size: 20px;
-  white-space: nowrap;
-}
-.keyboard--row {
-  display: block;
-  height: 3em;
-  margin: 0.5em;
-}
-
-.keyboard--row > * {
-  display: inline-block;
-  box-sizing: border-box;
-  position: relative;
-  cursor: pointer;
-  -webkit-user-select: none;
-  border-radius: 0.3em;
-  margin: 0.06em;
-  padding: 0 0.2em;
-  width: 3.3em;
-  height: 100%;
-}
-
-.key--bottom-left > * {
-  position: absolute;
-  text-align: left;
-  bottom: 0.4em;
-  left: 0.4em;
-}
-
-.key--bottom-right > * {
-  position: absolute;
-  text-align: right;
-  bottom: 0.4em;
-  right: 0.4em;
-  white-space:pre;
-}
-
-.key--word > * {
-  font-size: 0.8em;
-}
-
-.key--letter > div {
-  font-size: 1.2em;
-  height: 1.2em;
-  float: right;
-  clear: right;
-}
-
-.key--letter > div:first-child {
-  margin-top: -0.2em;
-}
-
-.key--letter > span {
-  font-size: 1.2em;
-  height: 1.2em;
-  display: block;
-  position: absolute;
-  margin-top: -0.2em;
-  margin-left: 0.1em;
-}
-.key--letter > span:last-child {
-  margin-top: 1em;
-}
-
-/* Light keyboard */
-
-.keyboard.keyboard--light .keyboard--row > * {
-  background: #ccc;
-  color: #111;
-  border: 1px solid #888;
-  box-shadow: 0 0.2em 0 0.05em #666;
-  border-bottom-color: #ddd;
-}
-
-.keyboard.keyboard--light .keyboard--row > .key--letter {
-  background: #f0f0f0;
-  box-shadow: 0 0.2em 0 0.05em #666;
-  border-bottom-color: #ddd;
-}
-
-.keyboard.keyboard--light .key--letter > span {
-  color: black
-}
-
-.keyboard.keyboard--light .key--letter span.french {
-  color: blue
-}
-
-.keyboard.keyboard--light .key--letter span.spec {
-  color: gray
-}
-
-.keyboard.keyboard--light .key--letter span.specTd {
-  color: #9400D3
-}
-</style>
 </head>
-
-<body data-device="Windows" data-section="keyboard">
+<body>
 <div class="tab-folder">
 <!--Starting English-->
 <div id="en" class="tab-content">
-<a class="buttonlang" href="#fr">Cliquer ici pour voir cette page en français...</a>
+<a class="buttonlang" href="#fr"> Cliquer ici pour voir cette page en français...</a>
 <div id="container">
-<img src="sil_tchad_logo.png" class="left responsive">
-<img src="sil-logo-blue.png" class="right responsive">
-<span id="toc-Chad-qwerty-keyboard-for-keyman-by-sil-Chad-"></span>
-<h1 xml:lang="en">Chad QWERTY Keyboard for Keyman
-<br>by SIL Chad</h1>
-
+<img src="sil_tchad_logo.png" class="left responsive" />
+<img src="sil-logo-blue.png" class="right responsive" />
+<h1 style="text-align: center;" class="color" xml:lang="en">Chad <span class="qw">QWERTY</span> Keyboard <span class="keyman"> for Keyman</span>
+<br />by SIL Chad
+</h1>
 <p class="tagline" xml:lang="en">Welcome to the Chad QWERTY Keyboard!<br>
 This keyboard, maintained by the Language Technology team of <a href="https://sites.google.com/sil.org/sil-tchad-langtech/home">SIL Chad</a>,
 allows you to type all of the special characters of the languages of Chad.</p>
-<hr/>
+<hr />
 
-<h3>Using the keyboard</h3>
+<h3 class="color" xml:lang="en">Using the keyboard</h3>
 <p xml:lang="en">To learn how to type a character with this keyboard, refer to the graphical keyboard layout below. The characters to the right on each key cap are typed with the help of a special “Chad” key.
 This key is found just to the left of the right-Shift key, and will likely appear like this on your keyboard: <img src="touche TD.png" width="30" height="30" title="slash"> (for typing slash and question mark).
 On the keyboard layout below, this key appears with a Chadian flag, to remind you that the “special” characters of Chad are typed with this key.</p>
@@ -157,7 +56,7 @@ Depending on the position of that character on the key cap, you might need to ta
 
 <!--Physical Keyboard-->
 <span id="toc-physical-keyboard-windows"></span>
-<h3>Chad QWERTY Keyboard layout</h3>
+<h3 class="color" xml:lang="en">Chad QWERTY Keyboard layout</h3>
 
 <div class="keyboard keyboard--light">
   <div class="keyboard--row">
@@ -238,7 +137,7 @@ Depending on the position of that character on the key cap, you might need to ta
 <p>Note that the special characters that appear in <span style="color: #9400D3">purple</span> can be used in Chadian languages, but that those in <span style="color: blue">blue</span> are just used in French, 
 and those in <span style="color: gray">gray</span> are intended to be used phonetically, not orthographically in Chadian languages.</p>
 
-<h3>Typing accents / combining diacritics</h3>
+<h3 class="color" xml:lang="en">Typing accents / combining diacritics</h3>
 <p>Note that some of the characters appear with dotted circles: <b>◌</b>. 
 These indicate accents (diacritics) which are combined with the previous character typed. 
 So if you type <b>“a”</b> and then type the character <b>“◌́”</b>, then the resulting character on the screen will be <b>“á”</b>.
@@ -247,7 +146,7 @@ So if you type <b>“a”</b> and then type the character <b>“◌́”</b>, th
  However not all accents can combine with all base characters. So if you type <b>“n̰”</b> or <b>“ɛ̂”</b>, 
  each resulting text contains two characters –  the base character and the combining accent.</p>
 
-<h3>Additional Characters</h3>
+<h3 class="color" xml:lang="en">Additional Characters</h3>
 <p>There are some additional characters that can be typed with this keyboard that are not displayed on the graphical keyboard layout above.
 In most cases they are modified forms of other characters that are on the layout.</p>
 <table border="1" cellspacing="1" cellpadding="5">
@@ -298,7 +197,7 @@ In most cases they are modified forms of other characters that are on the layout
 <p>In addition, the “Chad” key plus space ( /⎵ ) gives a no-break space, and typing space bar again ( /⎵ ⎵ ) gives a narrow no-break space.
 The “Chad” key plus hyphen ( /- ) gives a no-break hyphen.</p>
 
-<h3>Quotation Marks and Glottal Stop Characters</h3>
+<h3 class="color" xml:lang="en">Quotation Marks and Glottal Stop Characters</h3>
 <p>When you type an apostrophe <b>( ' )</b>, this keyboard produces a right single quotation mark <b>( ’ ), i.e. </b>the character used for contractions in English and French. 
 If you immediately type another apostrophe, you will get a “modifier letter apostrophe” <b>( ʼ )</b>. 
 While this looks identical to the single quotation mark, it is considered a letter and not punctuation, 
@@ -371,14 +270,14 @@ will be changed to curled quotes depending on the context. If you need to use st
  Remember that typing a double apostrophe <b>( ' ' ) </b>or a “Chad” key plus apostrophe <b>( /' ) </b>does not give you punctuation, 
  but a word-forming character to be used as a glottal in Chadian languages.</p>
 
-<h3>Fonts</h3>
+<h3 class="color" xml:lang="en">Fonts</h3>
 <p>Make sure you have a Unicode font selected (e.g. Charis SIL, Doulos SIL, Andika, Gentium, Times New Roman, etc.) to type special characters.</p>
 
-<h3>Contact</h3>
+<h3 class="color" xml:lang="en">Contact</h3>
 <p>For more information and guidance on the QWERTY Keyboard of Chad, you can reach us here : 
 <a href=https://sites.google.com/sil.org/sil-tchad-langtech/home>Language Technology Chad</a></p>
 
-<p>©&nbsp; SIL Global</p>
+<p>©&nbsp;SIL Global</p>
 </div>
 </div>
 <!--Ending English-->
@@ -387,19 +286,18 @@ will be changed to curled quotes depending on the context. If you need to use st
 <div id="fr" class="tab-content">
 <a class="buttonlang" href="#en">Click here to view this page in English...</a>
 <div id="container">
-<img src="sil_tchad_logo.png" class="left responsive">
-<img src="sil-logo-blue.png" class="right responsive">
-<span id="toc-clavier-Tchad-qwerty-pour-keyman-par-sil-Tchad-"></span>
-<h1 class="color" xml:lang="fr">Clavier Tchad QWERTY pour Keyman
-<br>par SIL Tchad
+<img src="sil_tchad_logo.png" class="left responsive" />
+<img src="sil-logo-blue.png" class="right responsive" />
+
+<h1 style="text-align: center;" class="color" xml:lang="fr">Clavier Tchad QWERTY pour Keyman</span>
+<br />par SIL Tchad
 </h1>
-         
 <p class="tagline" xml:lang="fr">Bienvenue au Clavier Tchad QWERTY !<br>
 Ce clavier, maintenu par l’équipe de Technologie Linguistique de <a href="https://sites.google.com/sil.org/sil-tchad-langtech/home">SIL Tchad</a>,
 vous permet de taper tous les caractères spéciaux des langues du Tchad. </p>
-<hr/>
+<hr />
 
-<h3>Utilisation du clavier</h3>
+<h3 class="color" xml:lang="fr">Utilisation du clavier</h3>
 <p xml:lang="fr">Pour apprendre comment taper un caractère avec ce clavier, référez-vous à la disposition graphique du clavier ci-dessous. 
 Les caractères à droite de chaque touche sont tapés a l’aide d’une touche spéciale « Tchad ». 
 Cette touche se trouve juste à gauche de la touche Majuscule-droite et apparaîtra probablement ainsi sur votre clavier :  <img src="touche TD.png" width="30" height="30" title="slash">
@@ -434,7 +332,7 @@ vous devrez peut-être taper sur la touche « Tchad » et/ou maintenir la to
 
 <!--Physical Keyboard-->
 <span id="toc-physical-keyboard-windows"></span>
-<h3>Disposition du clavier QWERTY Tchad</h3>
+<h3 class="color" xml:lang="fr">Disposition du clavier QWERTY Tchad</h3>
 
 <div class="keyboard keyboard--light">
   <div class="keyboard--row">
@@ -516,7 +414,7 @@ vous devrez peut-être taper sur la touche « Tchad » et/ou maintenir la to
 mais que ceux en <span style="color: blue">bleu</span> sont seulement utilisés en français, et ceux en <span style="color: gray">gris</span> sont destinés à être utilisés phonétiquement, 
 pas orthographiquement dans les langues tchadiennes.</p>
 
-<h3>Taper des accents / diacritiques de combinaison</h3>
+<h3 class="color" xml:lang="fr">Taper des accents / diacritiques de combinaison</h3>
 <p>Notez que certains des caractères apparaissent avec des cercles en pointillés : <b>◌</b>.
 Ceux-ci indiquent des accents (diacritiques) qui sont combinés avec le caractère précédent tapé. Ainsi, si vous tapez <b>« a »</b> puis tapez le caractère <b>« ◌́ »</b>,
  le caractère résultant à l’écran sera <b>« á »</b>. Tapez <b>« n »</b> plus <b>« ◌̃ »</b> pour obtenir <b>« ñ »</b>. Autant que possible, 
@@ -524,7 +422,7 @@ Ceux-ci indiquent des accents (diacritiques) qui sont combinés avec le caractè
  même s’ils sont chacun tapés avec deux frappes de touche séparées. Cependant, tous les accents ne peuvent pas se combiner avec tous les caractères de base. 
  Donc si vous tapez <b>« n̰ »</b> ou <b>« ɛ̂ »</b>, chaque texte résultant contient deux caractères &nbsp;–&nbsp; le caractère de base et l’accent combinant.</p>
 
-<h3>Caractères supplémentaires</h3>
+<h3 class="color" xml:lang="fr">Caractères supplémentaires</h3>
 <p>Il y a quelques caractères supplémentaires qui peuvent être tapés avec ce clavier et qui ne sont pas affichés sur la disposition graphique du clavier ci-dessus. 
 Dans la plupart des cas, ce sont des formes modifiées d’autres caractères qui se trouvent sur la disposition.</p>
 
@@ -577,7 +475,7 @@ Dans la plupart des cas, ce sont des formes modifiées d’autres caractères qu
 et si vous ajoutez un autre espace ( /⎵ ⎵ ), vous obtenez un espace insécable étroit.
 La touche « Tchad » plus le trait d’union ( /- ) donne un trait d’union insécable.</p>
 
-<h3>Guillemets et caractères de coup de glotte</h3>
+<h3 class="color" xml:lang="fr">Guillemets et caractères de coup de glotte</h3>
 
 <p>Lorsque vous tapez une apostrophe ( ' ), ce clavier produit un guillemet simple fermant ( ’ ), 
 c’est-à-dire le caractère utilisé pour les contractions en anglais et en français. Si vous tapez immédiatement une autre apostrophe, 
@@ -652,26 +550,19 @@ La colonne de gauche montre comment taper les guillemets français. Si la langue
 N’oubliez pas que taper deux apostrophes ( ' ' ) ou la touche « Tchad » suivie de l’apostrophe ( /' ) ne vous donne pas de ponctuation, 
 mais un caractère formateur de mot à utiliser comme coup de glotte dans les langues tchadiennes.</p>
 
-<h3>Polices</h3>
+<h3 class="color" xml:lang="fr">Polices</h3>
 <p>Assurez-vous d’avoir sélectionné une police Unicode (par exemple, Charis SIL, Doulos SIL, Andika, Gentium, Times New Roman, etc.) 
 pour taper des caractères spéciaux.</p>
 
-<h3>Contact</h3>
+<h3 class="color" xml:lang="fr">Contact</h3>
 <p> Pour plus d’information et orientation sur le Clavier QWERTY du Tchad vous pouvez nous joindre ici :
 <a href=https://sites.google.com/sil.org/sil-tchad-langtech/home>Technologie Linguistique Tchad</a></p>
 
-<p>©&nbsp; SIL Global</p>
+<p>©&nbsp;SIL Global</p>
 </div>
 </div>
 <!--Ending French-->
-
-<!--
-<script src="/cdn/deploy/js/jquery1-11-1.min.8101d596b2b8fa35fe3a634ea342d7c3.js"></script>
-<script src="/cdn/deploy/js/kbd-docs.75e1bcb8b752654daa7e44ba4a1353b1.js"></script>
-<div style="user-select: none;"></div><div class="kmw-wait-background"><div class="kmw-wait-box">
-<div class="kmw-alert-close"></div><div class="kmw-wait-text"></div><div class="kmw-wait-graphic"></div></div></div>
-<div data-lastpass-root="" style="position: absolute !important; top: 0px !important; left: 0px !important; height: 0px !important; width: 0px !important;"></div>
--->
+</div>
 </body>
 
 </html>
