Hong Kong keyboard updating
ready for reviewing

--- a/experimental/h/hong_kong/source/welcome.htm
+++ b/experimental/h/hong_kong/source/welcome.htm
@@ -40,8 +40,8 @@
   <p>The consonant "k" before vowels a â ă u ư o ô ơ can be transformed to "c"</p>
   <h1>韻腹 Nguyên Âm và Phụ Âm Cuối vowels and end consonants</h1> 
   <img src='vowels.png' alt='Keyboard Layout'>
-  <p> iu im in ip it組合用於取代iêu iêm iên iêp iêt當用嚟表示發音或者串唔係粵語詞源或者唔係漢粵詞詞源嘅詞語，譬如話來自嘅英文嘅借詞『𨋢lip"』</p>
-  <p>The iu im in ip it combiniation can be used to replace iêu iêm iên iêp iêt when representing sounds and spelling words without Cantonese origin and without sino-cantonese origin, for example loanword from English "lip"</p>
+  <p>"iu" "im" "in" "ip" "it"組合用於取代"iêu" "iêm" "iên" "iêp" "iêt"當用嚟表示發音或者串唔係粵語詞源或者唔係漢越詞詞源嘅詞語，譬如話來自嘅英文嘅借詞「𨋢lip」「天拿水thin-nà sủi」，或者係借用漢字嚟表示詞語嘅發音但係字嘅意思同漢字本身嘅意思無關嘅字，譬如話「點解đỉm-cải」</p>
+  <p>The "iu" "im" "in" "ip" "it" combiniation can be used to replace "iêu" "iêm" "iên" "iêp" "iêt" when representing sounds and spelling words without Cantonese origin and without sino-cantonese origin, for example loanword from English, such as "lip" and "thin-nà sủi", or in case of using chinese characters to represent sounds or a word but the meaning of the character is not linked with its origin meaning, such as "點解đỉm-cải"</p>
   <h1>音調 Thanh Điệu tones</h1>
   <img src='tones.png' alt='Keyboard Layout'>
 
@@ -151,7 +151,7 @@
     <tr>
       <td>7 (high entering)</td>
       <td>/</td>
-      <td>yaat></td>
+      <td>yaat</td>
       <td>yât一
       </td>
     </tr>
