--- a/release/s/shahmukhi_phonetic/source/readme.htm
+++ b/release/s/shahmukhi_phonetic/source/readme.htm
@@ -14,11 +14,7 @@
 <h1>Shahmukhi Phonetic</h1>
 
 <p>
-Shahmukhi is a modified Perso-Arab script for the Punjabi language. This keyboard intends to include support for characters, 
-not supported by the Urdu phonetics keyboard such as ArNoon (ݨ) and ArLaam (ࣇ - 08C7 in Unicode),
-(ਣ and ਲ਼ in Gurmukhi, respectively). ArLaam was added to Unicode recently and proper positioning 
-may not work in all applications. The Scheherazade New font supports the ArLaam and is included
-in this keyboard package.
+Shahmukhi is a modified Perso-Arab script for the Punjabi language. This keyboard intends to include support for characters not supported by the Urdu phonetics keyboard such as ArNoon (ݨ) and ArLaam (ࣇ U+08C7), (ਣ and ਲ਼ in Gurmukhi, respectively). ArLaam was added to Unicode recently and proper positioning may not work in all applications. The Scheherazade New font supports the ArLaam and is included in this keyboard package.
 </p>
 
 
