Vietnam keyboard updating
ready for reviewing

--- a/release/v/vietnam/source/welcome.htm
+++ b/release/v/vietnam/source/welcome.htm
@@ -145,6 +145,18 @@
     <td>li<strong>i</strong>n<strong>n</strong>/lie<strong>e</strong>n<strong>n</strong></td>
     <td>liêng</td>
   </tr>
+  <tr>
+    <td>ơi</td>
+    <td>oii</td>
+    <td>oi<strong>i</strong></td>
+    <td>ơi</td>
+  </tr>
+  <tr>
+    <td>ươi</td>
+    <td>uoii</td>
+    <td>tuoi<strong>i</strong></td>
+    <td>tươi</td>
+  </tr>
   </tbody>
 </table>
 
@@ -216,7 +228,7 @@
 
 <hr>
 
-<p>© cathaylab</p>
+<p>©cathaylab</p>
 
 </body>
 </html>
