--- a/experimental/h/hindi_flick/source/readme.htm
+++ b/experimental/h/hindi_flick/source/readme.htm
@@ -32,7 +32,7 @@
     </b>
   </p>
 
-  Barakunji is a mobile keyboard layout based upon the Devanagari varnamala's (alphabet) clustering of syllables. It is intended to be usable by anyone who knows the varnamala. 
+  Hindi Flick is a mobile keyboard layout based upon the Devanagari varnamala's (alphabet) clustering of syllables. It is intended to be usable by anyone who knows the varnamala. 
   It is inspired by the flick-based layouts popular in Japan and (to a lesser extent) Korea, as well as Vietnamese TELEX with regards to diacritic rules and magic.
   <br><br>
   The layout is as follows:
