--- a/experimental/h/hindi_flick/source/readme.htm
+++ b/experimental/h/hindi_flick/source/readme.htm
@@ -32,8 +32,8 @@
     </b>
   </p>
 
-  Hindi Flick is a mobile keyboard layout based upon the Devanagari varnamala's (alphabet) clustering of syllables. It is intended to be usable by anyone who knows the varnamala. 
-  It is inspired by the flick-based layouts popular in Japan and (to a lesser extent) Korea, as well as Vietnamese TELEX with regards to diacritic rules and magic.
+  Hindi Flick is a mobile keyboard layout based on the Varnamala, where each key corresponds to a set of syllables.
+  It is inspired by the flick-based layout popular in Japan as well as Vietnamese TELEX with regards to diacritic rules.
   <br><br>
   The layout is as follows:
   <br><br>
@@ -45,7 +45,7 @@
   There are 16 total keys, with 12 in the center being swipeable in multiple directions, longpress-able and multitap-able.
 
   <br><br>
-  For more detailed information regarding the layout and its functionality, please visit Community forum.
+  For help or to report bugs, please visit the Keyman community forums at: https://community.software.sil.org/
 
   <p>Copyright © SIL Global</p>
 
