--- a/experimental/h/hindi_flick/source/welcome.htm
+++ b/experimental/h/hindi_flick/source/welcome.htm
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Saral</title>
+  <title>Hindi Flick</title>
   <style type="text/css">
     p {
       font: 10pt Tahoma;
