--- a/release/h/hainam/source/readme.htm
+++ b/release/h/hainam/source/readme.htm
@@ -18,7 +18,7 @@
     hainam for hainam language, south-hokkienese, Bǽh-oe-tu.
 </p>
 
-<p>© cathaylab 2024-2024</p>
+<p>© cathaylab</p>
 
 <p> e-mail: goetiansoc@proton.me</p>
 
