--- a/release/gff/gff_amharic/source/welcome.htm
+++ b/release/gff/gff_amharic/source/welcome.htm
@@ -59,8 +59,8 @@ table.zaima th { text-align: center; background-color: #d7d0b9 }
 table.zaima { border-bottom: hidden }
 table.zaima { empty-cells: show }
 .tabs{
-    // width: 600px;
-    // display: block;
+    /* width: 600px; */
+    /* display: block; */
     margin: 40px auto;
     position: relative;
 }
@@ -90,13 +90,13 @@ table.zaima { empty-cells: show }
 .tabs .content {
     z-index: 0;/* or display: none; */
     overflow: hidden;
-    // width: 600px;
+    /* width: 600px; */
     padding: 25px;
     position: absolute;
     top: 27px;
     left: 0;
-    // background: #303030;
-    // color: #DFDFDF;
+    /* background: #303030; */
+    /* color: #DFDFDF; */
     border: solid black 1px;
     
     opacity:0;
@@ -114,6 +114,29 @@ table.zaima { empty-cells: show }
     opacity: 1;
     transition: opacity 400ms ease-out;
 }
+
+.keys {
+  display: inline-block;
+  border: 1px solid black;
+  padding: 5px; /* Add some space inside the box */
+  margin: 0 2px; /* Add some space between the boxes */
+}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+  margin: 0 2px; /* Add some space between the boxes */
+}
+.highlightExample {
+  border-radius: 2px;
+  padding: 2px;
+  border: 2px solid green;
+}
+.input {
+  border-radius: 2px;
+  padding: 2px;
+  border: 2px solid blue;
+}
 </style>
 </head>
 <body>
@@ -125,10 +148,20 @@ table.zaima { empty-cells: show }
       <label for="tab1">English</label>
       <div id="tab-content1" class="content">
 
-<h1>The Geʾez Frontier Foundation Keyboard for Amharic (አማርኛ) Language</h1>
+<h1>The Geʾez Frontier Foundation Keyboard for the Amharic (አማርኛ) Language</h1>
 
 <h2><a id="abstract" name="abstract"></a>Introduction</h2>
+<p>Thank you for installing the Geʾez Frontier Foundation&rsquo;s Amharic Keyboard! The keyboard has been optimized for maximal ease of use
+on various computing devices. Select your device from the list below to read the appropriate manual:</p>
 
+<ul>
+  <li><a href="#desktop">Desktop</a></li>
+  <li><a href="#phone">Mobile Phone</a></li>
+  <li><a href="#tablet">Tablet</a></li>
+</ul>
+
+<div id="desktop">
+<h1>Desktop (Windows, Mac) Keyboard</h1>
 <p style="text-align: justify;">
 This is an Amharic  (amh, አማርኛ) language mnemonic input method that applies Ethiopian writing conventions. 
 It requires a font supporting Ethiopic script under the Unicode 3.0 standard (two historic punctuation marks require Unicode 4.1 support). 
@@ -137,25 +170,52 @@ be intuitive and natural with respect to the sounds available in the English lan
 The keyboard also supports mnemonic mappings from non-English letters found in European keyboards.
 </p>
 
-<p>A more complete typing manual is provided as a PDF file with this distribution.</p>
+<p>A more complete typing manual is provided as <a href="https://help.keyman.com/keyboard/gff_amharic/3.2/AmharicTyping-English.pdf">a PDF file</a> with this distribution.</p>
 
  
 <h2><a id="letters" name="letters"></a>Typing Letters</h2>
 
 <p style="text-align: justify;">
-Only the letters used in Amharic may be typed with this keyboard. To type additional Ethiopic letters used by other languages, please
-download a keyboard for the language needed or the <em>language-neutral</em> keyboard that supports composition of all Ethiopic symbols found in Unicode 4.1.
+<i>Only</i> the letters used in Amharic may be typed with this keyboard. To type additional Ethiopic letters used by other languages, please
+<a href="https://keyman.com/keyboards?q=GFF">download a keyboard</a> for the language needed or the <em><a href="https://keyman.com/keyboards/gff_ethiopic">language-neutral</a></em> keyboard that supports composition of all Ethiopic symbols found in Unicode 14.
 </p>
 
+<h3>Quick Start Examples</h3>
+<p>
+The Amharic keyboard uses an intuitive <i>phonetic</i> system where the Amharic sounds are matched to the nearest English letters. You can think of how a word sounds in
+Amharic and then type it out with English.
+</p>
+<p style='margin-left:40px'><b>Example:</b> typing <kbd>s</kbd><kbd>e</kbd><kbd>l</kbd><kbd>a</kbd><kbd>m</kbd> produces <span class='highlightExample'>ሰላም</span></p>
+<p>
+Because Amharic has more sounds than English, we sometimes have to adjust this
+rule. For example, English does not have <span class='highlightExample'>ጠ</span> and the closest similar letter would be &lsquo;t&rsquo;. In this case you should type <kbd>Shift</kbd><kbd>t</kbd>, for capital <kbd>T</kbd>:</p>
+<p style='margin-left:40px'><b>Example:</b> typing <kbd>T</kbd><kbd>i</kbd><kbd>e</kbd><kbd>n</kbd><kbd>a</kbd><kbd>y</kbd><kbd>s</kbd><kbd>T</kbd><kbd>l</kbd><kbd>N</kbd> produces <span class='highlightExample'>ጤናይስጥልኝ</span></p>
+<p>Notice that we used capital <span class='input'>N</span> also for <span class='highlightExample'>ኝ</span> and we needed both <span class='input'>ie</span> together to make the 5th <span class='highlightExample'>ጠ</span> letter, <span class='highlightExample'>ጤ</span>. When the letter you want to type does not appear when you hit the similar sounding key in English, try using the capital next. If typing the capital does not work, then try hitting the key two times:
+</p>
+<p style='margin-left:40px'><b>Example:</b> typing <kbd>s</kbd><kbd>s</kbd><kbd>e</kbd><kbd>l</kbd><kbd>a</kbd><kbd>m</kbd> produces <span class='highlightExample'>ሠላም</span></p>
+<p style='margin-left:40px'><b>Example:</b> typing <kbd>S</kbd><kbd>S</kbd><kbd>e</kbd><kbd>H</kbd><kbd>e</kbd><kbd>y</kbd> produces <span class='highlightExample'>ፀሐይ</span></p>
+<p>Next, when you need to type the extra letters of Amharic like <span class='highlightExample'>ሏ</span>,<span class='highlightExample'>ሟ</span>,<span class='highlightExample'>ኴ</span> you can do so by typing an extra vowel after a <span class='input'>u</span>:
+</p>
+<p style='margin-left:40px'><b>Example:</b> typing <kbd>m</kbd><kbd>u</kbd><kbd>a</kbd> produces <span class='highlightExample'>ሟ</span></p>
+<p style='margin-left:40px'><b>Example:</b> typing <kbd>g</kbd><kbd>u</kbd><kbd>i</kbd><kbd>e</kbd> produces <span class='highlightExample'>ጔ</span></p>
+<p>
+Finally, we must introduce a special rule for ' (apostrophe). Some words are spelt with a <span class='highlightExample'>ሳድስ</span> (6<sup>th</sup>) letter followed by a vowel, like <span class='highlightExample'>ርኤ</span> in <span class='highlightExample'>ገብርኤል</span>. We use the apostrophe here to type <kbd>g</kbd><kbd>e</kbd><kbd>b</kbd><kbd>r</kbd><kbd>'</kbd><kbd>i</kbd><kbd>e</kbd><kbd>l</kbd> to make sure we get <span class='highlightExample'>ርኤ</span> instead of <span class='highlightExample'>ሬ</span>.
+</p>
+<p style='margin-left:40px'><b>Example:</b> typing <kbd>m</kbd><kbd>e</kbd><kbd>l</kbd><kbd>'</kbd><kbd>a</kbd><kbd>k</kbd> produces <span class='highlightExample'>መልአክ</span></p>
+<p style='margin-left:40px'><b>Example:</b> typing <kbd>m</kbd><kbd>'</kbd><kbd>e</kbd><kbd>e</kbd><kbd>r</kbd><kbd>a</kbd><kbd>f</kbd> produces <span class='highlightExample'>ምዕራፍ</span></p>
+<p>
+Type Apostrophe twice after a 6<sup>th</sup> order letter to make it appear in your document:</p>
+<p style='margin-left:40px'><b>Example:</b> typing <kbd>m</kbd><kbd>e</kbd><kbd>l</kbd><kbd>'</kbd><kbd>'</kbd><kbd>a</kbd><kbd>k</kbd> produces <span class='highlightExample'>መል'አክ</span></p>
+<p>
+We also use the &ldquo;number sign&rdquo; (&ldquo;#&rdquo; also know as the &ldquo;hash mark&rdquo;) for Ethiopic numbers, so <kbd>#</kbd><kbd>1</kbd> becomes <span class='highlightExample'>፩</span> and so on. If a <span class='highlightExample'>#</span> is needed in your document before a number, type it twice and: <kbd>#</kbd><kbd>#</kbd><kbd>1</kbd> becomes <span class='highlightExample'>#1</span>. The double strike works for other punctuation as well,
+so typing <kbd>;</kbd> once makes <span class='highlightExample'>፤</span> and a second time gives English semicolon <span class='input'>;</span>. 
+</p>
 
-<p>
-<strong>Special Notes:</strong>
-</p>
-<p>
-<ul>
-  <li>Apostrophe, ' , is a terminator following a ሳድስ (6<sup>th</sup> form) letter. For example: <kbd>gebr'iel</kbd> becomes ገብርኤል, <kbd>gebriel</kbd> becomes ገብሬል.</li>
-</ul>
-</p>
+<p><br/></p>
+
+
+<h2>Typing Tables</h2>
+<p>Typing all Amharic letters, punctuation and numerals is shown in the following tables:</p>
 
 <div style="margin-left: 1em;">
 <table class="kb">
@@ -345,6 +405,100 @@ hitting the punctuation key two or more times until it appears.</p>
 </div>
 
 <p><br/></p>
+</div>
+
+<div id="phone">
+<h1>Mobile Phone Keyboard</h1>
+
+<h2>Letters</h2>
+
+<p>
+When the GFF Amharic mobile keyboard starts, the key layout appears as shown in the following image.  Note the relationship between the letters of the <b>middle</b> row and <b>top</b> row:
+</p>
+
+<img src="images/gff_amharic-default-1.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>
+Tapping a key once, the modifier letters to the left (<code>አ</code>, <code>ኡ</code>, <code>ኢ</code>) and right  (<code>ኣ</code>, <code>ኤ</code>, <code>ኦ</code>) of the spacebar. For example, tapping <code>ግ</code> the modifiers change to <code>ገ</code>, <code>ጉ</code>, <code>ጊ</code>, <code>ጋ</code>, <code>ጌ</code>, <code>ጎ</code> .  If a modifier is tapped, ግ will be updated on screen.
+</p>
+<p>
+Observe that some keys have a small “hint” letter in the upper right corner. The hint letters can be typed by making a quick, light, downward “flick” on the key. These letters can also be typed using the “longress” approach explained in a following example.
+</p>
+
+<img src="images/gff_amharic-default-2.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>
+As an alternative, if preferred, holding a key down for a few moments (called a “longpress”) a popup menu appears where you can tap the letter desired.  The popup menu for <code>ግ</code> is shown below:
+</p>
+
+<img src="images/gff_amharic-default-4.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>
+The modifier keys will also have popups as applicable.  For example to enter the extended syllables for <code>ጐ</code>, <code>ጒ</code>, <code>ጓ</code>, <code>ጔ</code> and <code>ጕ</code> as shown:
+</p>
+
+<img src="images/gff_amharic-default-3.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<h3>Flicks</h3>
+<h3>Taps</h3>
+
+
+<h2>Punctuation</h2>
+
+<p>When typing letters, the <code>!</code> and <code>።</code> keys are available for entering the most common punctuation without shifting to another “layer”.  The following image shows the punctuation for a longpress of <code>!</code>:</p>
+
+<img src="images/gff_amharic-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>The punctuation for a longpress of <code>።</code>:</p>
+
+<img src="images/gff_amharic-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>For additional punctuation and numerals, tap the <code>123</code> key to shift to the next layer:</p>
+
+<img src="images/gff_amharic-punctuation-3.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>Note that numerals on the punctuation layer use the long press feature to make Geʾez numerals available:</p>
+
+<img src="images/gff_amharic-numerals-1.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>Tapping the <code>@</code> shifts to a 2nd layer to access all remaining punctuation:</p>
+
+<img src="images/gff_amharic-punctuation-4.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>A tap of the <code>፩</code> key will go to the final layer where Geʾez numbers and some less used, and non-Amharic letters, can be accessed.</p>
+
+<h2>Numerals</h2>
+
+<p>The last layer to shift to presents the Geʾez numbers, all Geʾez punctuation, letters of related languages, and a few lesser used letters that did not fit conveniently on the initial letters layer.</p>
+
+<p>Note the arrow button, <code>▶</code>, at the end of the row of Geʾez numerals, tapping it will slide the numerals to the remaining numbers that are orders of ten (e.g. ፳, ፴, ፵, etc.):</p>
+
+<img src="images/gff_amharic-numerals-2.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>After tapping the <code>▶</code> button, the Geʾez orders of ten appear as shown:</p>
+
+<img src="images/gff_amharic-numerals-3.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>Tapping the <code>▶</code> button again slides to the western digits, a final tap will return to the initial Geʾez numerals.</p>
+
+<img src="images/gff_amharic-numerals-4.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>Simply tap the <code>ሀለሐ</code> key to return to the starting letters layers.</p>
+</div>
+
+<div id="tablet">
+<h1>Tablet Keyboard</h1>
+
+<h2>Letters</h2>
+
+<h3>Flicks</h3>
+<h3>Taps</h3>
+
+<h2>Punctuation</h2>
+<h2>Numerals</h2>
+</div>
+
+
 <hr/>
 
 <h2>License</h2>
@@ -386,7 +540,7 @@ hitting the punctuation key two or more times until it appears.</p>
 ይህ የኢትዮጵያዊያን የአፃፃፍ ልምድን የሚከተል የአማርኛ (amh, አማርኛ) ቋንቋ የኔሞኒክ ማስገቢያ መንገድ ነው። በUnicode 3.0 standard ስር (Unicode 4.1 ሁለት ታሪካዊ የነጥብ ምልክቶችን እገዛ ይፈልጋል) የኢትዮፒክ ስክሪፕት (Ethiopic script) ፊደል እገዛ ያስፈልገዋል።  የአማርኛ ታይፕ ሰሌዳ «ኔሞኒክ» እና ለዪ.ኤስ እንግሊዘኛ «QWERTY» ታይፕ ማድረጊያ ሰሌዳ የተቀረጸ ነው። ይህም ማለት የታይፕ ሰሌዳው ካለምንም እውቀት እና በተፈጥሮ በእንግሊዛኛ ቋንቋ ከሚሰጡት ድምፆችን የእንግሊዘኛ የታይፕ ሰሌዳን (QWERTY በመባል የሚታወቀውን) ተጠቃሚ በማድረግ የተቀረፀ ነው። በተጨማሪም የታይፕ ሰሌዳው በኔሞኒክ እገዛ፣ እንግሊዘኛ ካልሆኑ ፊደላት ከአውሮፓውያን የታይፕ ሰሌዳዎች ጋር የተገናኘ ነው።
 </p>
 
-<p>ከዚህ ስርጭት ጋር የተያያዘው የPDF ፋይል በተጨማሪ ሁኔታ ተሟልቶ የተዘጋጀ የታይፕ መምሪያ ያካትታል።</p>
+<p>ከዚህ ስርጭት ጋር የተያያዘው <a href="https://help.keyman.com/keyboard/gff_amharic/3.2/AmharicTyping-Amharic.pdf">የPDF ፋይል</a> በተጨማሪ ሁኔታ ተሟልቶ የተዘጋጀ የታይፕ መምሪያ ያካትታል።</p>
 
  
 <h2><a id="letters-am" name="letters-am"></a>ፊደላትን ታይፕ ማድረግ</h2>
