Adding <description> tags.

--- a/release/gff/gff_amharic/source/welcome.htm
+++ b/release/gff/gff_amharic/source/welcome.htm
@@ -154,13 +154,9 @@ kbd {
 <p>Thank you for installing the Geʾez Frontier Foundation&rsquo;s Amharic Keyboard! The keyboard has been optimized for maximal ease of use
 on various computing devices. Select your device from the list below to read the appropriate manual:</p>
 
-<ul>
-  <li><a href="#desktop">Desktop</a></li>
-  <li><a href="#phone">Mobile Phone</a></li>
-  <li><a href="#tablet">Tablet</a></li>
-</ul>
-
 <div id="desktop">
+<details>
+<summary>💻 Desktop (Windows, Mac, Linux)</summary>
 <h1>Desktop (Windows, Mac) Keyboard</h1>
 <p style="text-align: justify;">
 This is an Amharic  (amh, አማርኛ) language mnemonic input method that applies Ethiopian writing conventions. 
@@ -403,11 +399,12 @@ hitting the punctuation key two or more times until it appears.</p>
 <dir><a href="http://keyboards.ethiopic.org/docs/AmharicTypingPractice.docx">http://keyboards.ethiopic.org/docs/AmharicTypingPractice.docx</a>
 </dir>
 </div>
-
-<p><br/></p>
+</details>
 </div>
 
 <div id="phone">
+<details>
+<summary>📱 Mobile (Phone)</summary>
 <h1>Mobile Phone Keyboard</h1>
 
 <h2>Letters</h2>
@@ -484,9 +481,12 @@ The modifier keys will also have popups as applicable.  For example to enter the
 <img src="images/gff_amharic-numerals-4.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p>Simply tap the <code>ሀለሐ</code> key to return to the starting letters layers.</p>
+</details>
 </div>
 
 <div id="tablet">
+<details>
+<summary>🔲 Tablet</summary>
 <h1>Tablet Keyboard</h1>
 
 <h2>Letters</h2>
@@ -496,6 +496,7 @@ The modifier keys will also have popups as applicable.  For example to enter the
 
 <h2>Punctuation</h2>
 <h2>Numerals</h2>
+</details>
 </div>
 
 
