Icon change and dividers.

--- a/release/gff/gff_amharic/source/welcome.htm
+++ b/release/gff/gff_amharic/source/welcome.htm
@@ -156,7 +156,7 @@ on various computing devices. Select your device from the list below to read the
 
 <div id="desktop">
 <details>
-<summary>💻 Desktop (Windows, Mac, Linux)</summary>
+<summary>🖥️ Desktop/Laptop (Windows, Mac, Linux)</summary>
 <h1>Desktop (Windows, Mac) Keyboard</h1>
 <p style="text-align: justify;">
 This is an Amharic  (amh, አማርኛ) language mnemonic input method that applies Ethiopian writing conventions. 
@@ -399,6 +399,8 @@ hitting the punctuation key two or more times until it appears.</p>
 <dir><a href="http://keyboards.ethiopic.org/docs/AmharicTypingPractice.docx">http://keyboards.ethiopic.org/docs/AmharicTypingPractice.docx</a>
 </dir>
 </div>
+
+<hr/>
 </details>
 </div>
 
@@ -481,6 +483,8 @@ The modifier keys will also have popups as applicable.  For example to enter the
 <img src="images/gff_amharic-numerals-4.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p>Simply tap the <code>ሀለሐ</code> key to return to the starting letters layers.</p>
+
+<hr/>
 </details>
 </div>
 
@@ -500,6 +504,7 @@ The modifier keys will also have popups as applicable.  For example to enter the
 </div>
 
 
+<p><br/></p>
 <hr/>
 
 <h2>License</h2>
